--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@ html, body{
     transition: all .3s;
     -webkit-text-size-adjust: none;
 }
-h1, h2 {  text-align: center; }
+h1, h2, p {  text-align: center; }
 </style>
 </head>
 <body>
-<h1>Download {{ .TxRate | formatRate }}</h1>
-<h1>Upload {{ .RxRate | formatRate }}</h1>
+<h1>Download {{ .Info.TxRate | formatRate }}</h1>
+<h1>Upload {{ .Info.RxRate | formatRate }}</h1>
+<p>
+<img alt="Download vs Upload" src="data:image/png;base64,{{ .Image }}">
+</p>
 <h2>
-Quota Remaining {{ .QuotaRemaining | formatQuota }} / Monthly {{ .QuotaMonthly | formatQuota }}
+Quota Remaining {{ .Info.QuotaRemaining | formatQuota }} / Monthly {{ .Info.QuotaMonthly | formatQuota }}
 </h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=PLfF0FEkYFw">Video explaining the issue with our deteriorating Superfast Cornwall copper line</a></li>
