--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1, h2, p {  text-align: center; }
 <h1>Download {{ .Info.TxRate | formatRate }}</h1>
 <h1>Upload {{ .Info.RxRate | formatRate }}</h1>
 <p>
-<img alt="Download vs Upload" src="data:image/png;base64,{{ .Image }}">
+<img alt="Superfast Cornwall speeds" src="data:image/png;base64,{{ .Image }}">
 </p>
 <h2>
 Quota Remaining {{ .Info.QuotaRemaining | formatQuota }} / Monthly {{ .Info.QuotaMonthly | formatQuota }}
