--- a/index.html
+++ b/index.html
@@ -2,26 +2,23 @@
 <html>
 <head>
 <title>Praze Farm Internet speed</title>
-<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,minimum-scale=1">
-<link rel="stylesheet" href="https://www.prazefarm.co.uk/style.css" type="text/css"/>
+<meta charset="utf-8" />
 <style>
 html, body{
-    margin: 1em;
-    padding: 0;
+    font-family: "Noto Serif", serif;
     font-weight: 300;
-    overflow: hidden;
-    height: 100%;
-    -webkit-transition: all .3s;
-    transition: all .3s;
     -webkit-text-size-adjust: none;
+    margin: 0 auto;
+    max-width: 700px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    color: #444444;
 }
 h1, h2, p {  text-align: center; }
-main { border-top: 1px solid #632; }
 </style>
 </head>
 <body>
-<main>
 <h1>Download {{ .Info.TxRate | formatRate }}</h1>
 <h1>Upload {{ .Info.RxRate | formatRate }}</h1>
 <p>
@@ -35,6 +32,5 @@ Quota Remaining {{ .Info.QuotaRemaining | formatQuota }} / Monthly {{ .Info.Quot
 <li><a href="http://github.com/kaihendry/prazespeed">Source code of this Web application</a></li>
 <li><a href="https://www.prazefarm.co.uk">Visit Praze Farm in Cornwall, UK</a></li>
 </ul>
-</main>
 </body>
 </html>
