Revert "Try ANOMALY_DETECTION_BAND"
This reverts commit 6263fc3d2983265cbc5c8a01aacf327d2ccb6321.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1">
 <meta charset="utf-8" />
 <style>
-html, body {
-  font-family: "Noto Serif", serif;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: #f4f4f4;
-  color: #444444;
+html, body{
+    font-family: "Noto Serif", serif;
+    font-weight: 300;
+    -webkit-text-size-adjust: none;
+    margin: 0 auto;
+    max-width: 700px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    color: #444444;
 }
-img { max-width: 100vmax; max-height: 70vmin; height:auto; width:auto; }
-
 h1, h2, p {  text-align: center; }
 </style>
 </head>
