New fibre line with A&A API change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ h1, h2, p {  text-align: center; }
 Quota Remaining {{ .Info.QuotaRemaining | formatQuota }} / Monthly {{ .Info.QuotaMonthly | formatQuota }}
 </h2>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=PLfF0FEkYFw">Video explaining the issue with our deteriorating Superfast Cornwall copper line</a></li>
+<li>2021 we have <a href="https://dabase.com/blog/2021/FTTP/">Fibre in Cornwall</a>!</li>
+<li><a href="https://www.youtube.com/watch?v=PLfF0FEkYFw">Old video explaining the issue with our deteriorating Superfast Cornwall copper line</a></li>
 <li><a href="http://github.com/kaihendry/prazespeed">Source code of this Web application</a></li>
 <li><a href="https://www.prazefarm.co.uk">Visit Praze Farm in Cornwall, UK</a></li>
 </ul>
